4.0
	+ Added EBox::debugDump method
	+ Added EBox::Exception::RESTRequest
	+ Set version to 4.0
3.5
	+ Fix error when using __x function from Gettext
	+ EBox::Netwrapper::iface_by_address not longer assummes that
	  interfaces could not share IP addresses
	+ Added exception for component not exists
	+ DataInUse exception is external to avoid logging of expected UI behaviors
	+ Added support for Hebrew translations
	+ Set version to 3.5
	+ Added EBox::Exceptions::WrongHTTPReferer
3.4.1
	+ Set the message in the trace
3.4
	+ Store trace on EBox::Exceptions::Base creation and available at
	  trace method
	+ Make sure commercial messages are only displayed in English or Spanish
	+ Set debug = yes by default for daily builds
	+ Added EBox::Config::psgi() to get the path where all PSGI applications
	  are stored
	+ Added EBox::Config::list() to parse space-separated values
	+ Updated EBox::Config::TestStub::fake to override EBox::Config::home so
	  is more easy to use EBox::Users in unit tests
	+ Avoid undefined $Error::Depth warning in exceptions
	+ Set version to 3.4
3.3
	+ Added Slovenian and Vietnamese languages
	+ Switch from Error to TryCatch for exception handling
	+ New EBox::Exceptions::Error to encapsulate generic Perl errors
	+ New urlEditions() helper method in EBox::Config
	+ Added EBox::NetWrappers::clean_ifaces_list_cache function
	+ Added missing EBox::Exceptions uses
	+ Fix error when initializing the framework without full environment (add
	  the full path for id command)
	+ Truncate stack traces in Auth modules to avoid reveal credentials
	+ Set version to 3.3
3.2
	+ Set version to 3.2
	+ Debug disabled by default for the stable release
3.1.2
	+ Exception stacktraces are now properly logged or shown in the interface
	  according to the debug and dump_exceptions confkeys
	+ Add new exception InvalidArgument
	+ EBox::Validate::checkEmailAddress does not ignore any longer white spaces
	  at the begin and end of the address